--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "streamlit (>=1.49.1,<2.0.0)",
     "langgraph (>=0.6.7,<0.7.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "langchain-ollama (>=0.3.8,<0.4.0)"
+    "langchain-ollama (>=0.3.8,<0.4.0)",
+    "tavily-python (>=0.7.12,<0.8.0)"
 ]
 
 
