--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,7 @@ dependencies = [
     "langgraph (>=0.6.7,<0.7.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "langchain-ollama (>=0.3.8,<0.4.0)",
-    "tavily-python (>=0.7.12,<0.8.0)",
-    "networkx (>=3.0,<4.0.0)",
-    "plotly (>=5.17.0,<6.0.0)"
+    "tavily-python (>=0.7.12,<0.8.0)"
 ]
 
 
